--- a/index.html
+++ b/index.html
@@ -46,7 +46,25 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script>
+        var query="covid";
+        var begindate=2010;
+        var enddate=2020
+        var queryURL ="https://api.nytimes.com/svc/search/v2/articlesearch.json?q="+query+"&begin_date="+begindate+"0101&end_date="+enddate+"1231&api-key=BWMFLVuMp4tJhBEvdnmPA01G4KEIeTbp";
 
+
+        
+        $.ajax({
+    url: queryURL,
+    method: "GET"
+    }).then(function(response) {
+    console.log(response);
+    for(i=0; i<response.response.docs.length; i++){
+    console.log(response.response.docs[i].abstract);
+    console.log(response.response.docs[i].web_url);
+    }
+    })
+    </script>
 
 </body>
 
