--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>New York Times Search</title>
+    <title id="title">New York Times Search</title>
 </head>
 
-<body>
+<body id="body">
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">New York Times Search</h1>
