--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
         <button type="reset" value="reset" class="btn btn-primary" id="reset">Clear Results</button>
 
     </form>
+    <article id="articles">
+
+    </article>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <script>
+    <!-- <script>
         var query="covid";
         var begindate=2010;
         var enddate=2020
@@ -64,7 +67,7 @@
     console.log(response.response.docs[i].web_url);
     }
     })
-    </script>
+    </script> -->
 
 </body>
 
